# erd-ga

./: .editorconfig  .flake8  .gitignore  .mise.toml  Dockerfile  README.md  action.yaml  pyproject.toml
.devcontainer/: devcontainer-setup.sh
.github/workflows/: ci.yml  ga_test.yml  release.yml
src/erd_ga/: erd_dump.py
tests/: conftest.py  run_migrations.sh  test_erd_dump.py
tests/migrations/: 0000001_init.sql
tests/sql/: airbnb.sql  analytics.sql  mflix.sql  simple.sql
